--- a/lineSplitting.ipynb
+++ b/lineSplitting.ipynb
@@ -119,6 +119,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BINARISATION"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -151,6 +158,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CALCULATING ANGLE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
@@ -176,6 +190,13 @@
     "# it positive\n",
     "else:\n",
     "    angle = -angle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ROTATING IMAGE"
    ]
   },
   {
@@ -266,8 +287,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LINE REMOVAL"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -278,13 +306,12 @@
        "-1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#LINE REMOVAL\n",
     "img=rotated\n",
     "laplacian = cv2.Laplacian(img,cv2.CV_8UC1) # Laplacian OR\n",
     "edges = cv2.Canny(img,80,10,apertureSize = 3) # canny Edge OR\n",
